frontend/test/should_fail/same_attribute_as_node_edge_name.grg
using same_attribute_as_node_edge_name;

test foo {
	// the model contains the interesting construct
}